--- a/categories.html
+++ b/categories.html
@@ -303,7 +303,7 @@
 
       <!-- Footer -->
 
-     <footer class="footer">
+      <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
@@ -432,7 +432,7 @@
                   </div>
                 </div>
                 <div class="red_button add_to_cart_button">
-                  <a href="#">Order Now</a>
+                  <a href="https://wa.me/393896025905?text=Hello, I want to order this product: ${product.name}, Price:  €${product.price}, Link: https://wowvaiya.shop/single.html?id=${doc.id}">Order Now</a>
                 </div>
               </div>
             `;
