--- a/single.html
+++ b/single.html
@@ -156,13 +156,13 @@
                 <li><a href="index.html">Home</a></li>
                 <li>
                   <a href="categories.html"
-                    ><i class="fa fa-angle-right" aria-hidden="true"></i
-                    >Shop</a
+                    ><i class="fa fa-angle-right" aria-hidden="true"></i>Shop</a
                   >
                 </li>
                 <li class="active">
                   <a href="#"
-                    ><i class="fa fa-angle-right" aria-hidden="true"></i>Product Details</a
+                    ><i class="fa fa-angle-right" aria-hidden="true"></i>Product
+                    Details</a
                   >
                 </li>
               </ul>
@@ -201,7 +201,10 @@
 
               <div class="">
                 <div class="red_button add_to_cart_button">
-                  <a href="#">Order Now</a>
+                  <a
+                    href="https://wa.me/393896025905?text=Hello, I want to order this product: ${product.name}, Price:  €${product.price}, Link: https://wowvaiya.shop/single.html?id=${doc.id}"
+                    >Order Now</a
+                  >
                 </div>
               </div>
             </div>
