--- a/single.html
+++ b/single.html
@@ -202,7 +202,7 @@
               <div class="">
                 <div class="red_button add_to_cart_button">
                   <a
-                    href="https://wa.me/393896025905?text=Hello, I want to order this product: ${product.name}, Price:  €${product.price}, Link: https://wowvaiya.shop/single.html?id=${doc.id}"
+                    href="https://wa.me/393896025905?text=Hello, I want to order this product: Link: https://wowvaiya.shop/single.html?id=${doc.id}"
                     >Order Now</a
                   >
                 </div>
